<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerCollectionActivity"
    android:background = "@drawable/gradient_drawable">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:cardCornerRadius="250dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/collection_player_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/collection_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/user_qr_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="208dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/qr_code_icon"
        android:onClick="userQrButtonClicked"
        android:text="QR"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/collection_total_codes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_codes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/collection_total_codes_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/collection_total_codes"
        app:layout_constraintStart_toEndOf="@+id/collection_total_codes" />

    <TextView
        android:id="@+id/collection_total_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collection_total_codes" />

    <TextView
        android:id="@+id/collection_total_points_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/collection_total_points"
        app:layout_constraintStart_toEndOf="@+id/collection_total_points" />

    <TextView
        android:id="@+id/collection_highest_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/highest_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collection_total_points" />

    <TextView
        android:id="@+id/collection_highest_score_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/collection_highest_score"
        app:layout_constraintStart_toEndOf="@+id/collection_highest_score" />

    <TextView
        android:id="@+id/collection_lowest_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lowest_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collection_highest_score" />

    <TextView
        android:id="@+id/collection_lowest_score_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/collection_lowest_score"
        app:layout_constraintStart_toEndOf="@+id/collection_lowest_score" />

    <ListView
        android:id="@+id/qr_code_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/collection_lowest_score" />


</androidx.constraintlayout.widget.ConstraintLayout>