<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/qr_code_list_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/points"
        app:layout_constraintStart_toEndOf="@+id/qr_code_list_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/qr_code_list_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/qr_code_list_points_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/qr_code_list_points"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/more_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qr_code_list_scans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_scans"
        app:layout_constraintStart_toEndOf="@+id/qr_code_list_image"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_list_points" />

    <TextView
        android:id="@+id/qr_code_list_scans_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/qr_code_list_scans"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_list_points_val" />

</androidx.constraintlayout.widget.ConstraintLayout>